# silvanus

./: .gitignore  CMakeLists.txt  README.md  SilvanusPro.manifest  index.md  silvanus.manifest  silvanus.py
commands/: basicboxcommand.py
commands/basicbox/: entities.py  (+4 more)
lib/: __init__.py  generateboxcommand.py
src/: CMakeLists.txt  SilvanusPro.cpp  SilvanusPro.h  SilvanusPro.h.in
src/lib/: generateboxcommand.cpp  generateboxcommand.hpp
src/lib/common/: commandbutton.cpp  commandbutton.hpp  common.h  eventhandlers.cpp  eventhandlers.hpp  fusion360command.cpp  fusion360command.hpp
src/lib/generatebox/: dialog.cpp  dialog.hpp  dividers.hpp
src/lib/generatebox/dialog/: InputConfig.hpp  dialog.cpp  dialog.hpp  dividers.hpp
src/lib/generatebox/dialog/entities/: DialogInputs.hpp  InputConfig.hpp
src/lib/generatebox/dialog/presentation/: GenerateBoxDialog.cpp  GenerateBoxDialog.hpp  PanelConfigurationManager.cpp  PanelConfigurationManager.hpp  PanelDialogControls.cpp  PanelDialogControls.hpp  Parameter.cpp  Parameter.hpp  createdialogpanels.cpp  createdialogpanels.hpp  createpaneloverriderow.hpp  dialog.cpp  dialog.hpp  dividers.hpp  entity_helpers.cpp  entity_helpers.hpp  validateDimensions.hpp
src/lib/generatebox/dialog/systems/: DialogSystemManager.hpp  addMaxOffset.hpp  addPanelDimensions.hpp  addPanelOrientation.hpp  detectPanelCollisions.cpp  detectPanelCollisions.hpp  findJoints.cpp  findJoints.hpp  initializePanelDimensions.cpp  initializePanelOrientations.cpp  initializePanelsFromUserOptions.cpp  initializePanelsFromUserOptions.hpp  projectHeightPlanes.cpp  projectLengthPlanes.cpp  projectPlanes.cpp  projectPlanes.hpp  projectWidthPlanes.cpp  updateEnableValue.cpp  updateEnableValue.hpp  updateFingerPattern.cpp  updateFingerPattern.hpp  updateFingerWidth.cpp  updateFingerWidth.hpp  updateJointCollisionData.cpp  updateJointCollisionData.hpp  updateJointCollisionDataImpl.cpp  updateJointDirection.cpp  updateJointDirection.hpp  updateJointDirectionInputs.hpp  updateJointPattern.cpp  updateJointPattern.hpp  updateJointPatternInputs.hpp  updateJointPlanes.cpp  updateJointPlanes.hpp  updatePanelDimensions.cpp  updatePanelDimensions.hpp  updateThicknessDimension.cpp  updateThicknessDimension.hpp
src/lib/generatebox/entities/: AxisFlag.hpp  BackPanel.hpp  BottomPanel.hpp  BoxParameters.hpp  ChildPanels.hpp  DialogInputs.hpp  Dimensions.hpp  DividerTags.hpp  EnableInput.hpp  Enabled.hpp  EntitiesAll.hpp  ExpressionParameterMap.hpp  ExtrudeFeature.hpp  ExtrusionDistance.hpp  FingerMode.hpp  FingerPattern.hpp  FingerPatternType.hpp  FingerWidth.hpp  Height.hpp  HeightJointInput.hpp  InputConfig.hpp  JoinedPanels.hpp  JointAxis.hpp  JointDirection.hpp  JointEnabled.hpp  JointExtrusion.hpp  JointGroup.hpp  JointGroupTag.hpp  JointName.hpp  JointPanel.hpp  JointPanelOffset.hpp  JointPattern.hpp  JointPatternDistance.hpp  JointPatternPosition.hpp  JointPatternTags.hpp  JointPatternType.hpp  JointPatternValue.hpp  JointPosition.hpp  JointProfile.hpp  JointThickness.hpp  (+46 more)
src/lib/generatebox/fusion/: FingerCutsPattern.cpp  FingerCutsPattern.hpp  FusionSketch.cpp  FusionSketch.hpp  FusionSupport.cpp  FusionSupport.hpp  PanelFeature.cpp  PanelFeature.hpp  PanelFingerSketch.cpp  PanelFingerSketch.hpp  PanelProfileSketch.cpp  PanelProfileSketch.hpp
src/lib/generatebox/render/: DirectRenderer.cpp  DirectRenderer.hpp  ParametricRenderer.cpp  ParametricRenderer.hpp  Renderer.cpp  Renderer.hpp  rendersupport.hpp
src/lib/generatebox/render/entities/: AxisProfile.hpp  Dimensions.hpp  DividerTags.hpp  EndReferencePoint.hpp  EntitiesAll.hpp  ExtrusionDistance.hpp  FingerPattern.hpp  FingerWidth.hpp  FingerWidthInput.hpp  FrontPanel.hpp  InsidePanel.hpp  JointExtrusion.hpp  JointGroup.hpp  JointOrientation.hpp  JointPatternValue.hpp  JointProfile.hpp  JointProfileGroup.hpp  Kerf.hpp  LeftPanel.hpp  Length.hpp  MaxOffset.hpp  MaxOffsetInput.hpp  OutsidePanel.hpp  PanelExtrusion.hpp  PanelOffset.hpp  PanelTag.hpp  Panels.hpp  Position.hpp  Thickness.hpp  ToggleableThicknessInput.hpp  Width.hpp
src/lib/generatebox/render/presentation/: DirectRenderer.cpp  DirectRenderer.hpp  ParametricRenderer.cpp  ParametricRenderer.hpp  rendersupport.hpp
src/lib/generatebox/render/systems/: ConfigureJoints.hpp  ConfigurePanels.hpp  SilvanusCore.cpp  SilvanusCore.hpp
src/lib/generatebox/render/systems/joints/: initializeJointGroups.cpp  initializeJointPatternValues.cpp  kerfAdjustments.cpp  render_joint_systems.hpp  updateJointPatternDistances.cpp  updateJointProfiles.cpp
src/lib/generatebox/render/systems/panels/: initializeJointEnabledFromInput.cpp  initializeJointExtrusionFromThicknessOffsetAndName.cpp  initializePanelExtrusionsFromOffsetAndDistance.cpp  initializePanelGroupFromProfileOrientationAndPosition.cpp  kerfAdjustInsideJointExtrusionOffset.cpp  kerfAdjustInsideJointPanelOffsets.cpp  kerfAdjustInsideJointThickness.cpp  kerfAdjustInsidePanelOffsets.cpp  kerfAdjustOutsideJointPanelOffsets.cpp  kerfAdjustOutsidePanelOffsets.cpp  kerfAdjustPanelProfiles.cpp  logInitialJointProperties.cpp  render_panels_systems.hpp  tagFingerPatterns.cpp  tagJointDirections.cpp  tagJointPatterns.cpp  tagPanelOrientations.cpp  updateEndReferencePointsFromDimensions.cpp  updateExtrusionDistancesFromDimensions.cpp  updateJointPanelOffsetsFromExpressions.cpp  updateJointPatternPositionsFromPanelAndJointPositions.cpp  updateJointProfilesFromJointDirections.cpp  updateJointProfilesFromJointPatterns.cpp  updateJointProfilesFromPanelAndJointOrientations.cpp  updateJointProfilesFromPanelAndJointPositions.cpp  updatePanelOffsetsFromEndReferencePoints.cpp  updatePanelOffsetsFromPanelMinPoints.cpp  updatePanelProfilesFromEndReferencePoints.cpp  updatePanelProfilesFromPanelMinPoints.cpp  updateStartReferencePointsFromEndReferencePoints.cpp
src/lib/generatebox/systems/: ConfigureJoints.cpp  ConfigureJoints.hpp  ConfigurePanels.cpp  ConfigurePanels.hpp  ReadInputs.cpp  ReadInputs.hpp  SilvanusCore.cpp  SilvanusCore.hpp
tests/: CMakeLists.txt  SilvanusPro.test.cpp  main.cpp
util/: __init__.py  appcontext.py  log.py
(+25 files in other folders)
